# TIDE-4-Bachelor-Project-2025

./: .gitignore  README.md  pyproject.toml
src/ocean/: __init__.py
src/ocean/cli/: main.py
src/ocean/datasets/: fintabnet.py
src/ocean/models/: gte_detectron2.py  openai_csv_extractor.py
src/ocean/papers/: core_api.py
src/ocean/pdf/: render.py
src/ocean/utils/: logging.py
