[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocean"
version = "0.1.0"
description = "Ocean PDF table extraction pipeline: paper retrieval -> PDF conversion -> table/cell detection."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "G"}]

dependencies = [
  "requests>=2.31",
  "python-dotenv>=1.0",
  "tqdm>=4.66",
  "pydantic>=2.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "Pillow>=10.0",
  "PyMuPDF>=1.24",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
ml = [
  "torch>=2.1",
  "opencv-python>=4.8",
  "matplotlib>=3.8",
]
# NOTE: Detectron2 is platform/CUDA-dependent and typically installed separately.

[project.scripts]
ocean = "ocean.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
